# databricks-with-claude

./: .gitignore  .mcp.json  CLAUDE.md  README.md  databricks.yml  main.py  pyproject.toml
.claude/: settings.json
.claude/agents/: databricks-metadata-querier.md
.claude/skills/: skill-rules.json
.claude/skills/databricks-etl-patterns/: SKILL.md
.claude/skills/medallion-architecture/: SKILL.md
.claude/skills/pyspark-best-practices/: SKILL.md
.claude/skills/unity-catalog-data-discovery/: SKILL.md
src/: README.md  nyctaxi_functions.py
src/etl/: base.py
src/etl/gold/: daily_trips_aggregation.py
tests/: conftest.py  test_nyc_functions.py
tests/etl/: test_base.py
tests/etl/gold/: test_daily_trips_aggregation.py
