[project]
name = "databricks-project-template"
version = "0.1.0"
description = "Databricks project template with PySpark and Claude Code support"
requires-python = ">=3.12"
dependencies = [
    "databricks-connect>=17",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.14.0",
]
